--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<meta name="keywords" content="ITIS vinci, Serra, Arduino, PCTO, green, bio, natura, tech, informatica, verde, piante, arduino, serra-arduino" />
 	<link href="style.css" type="text/css" rel="stylesheet" />
 	</head>
+	ciaoweifi
 	
 	<body>
 		<header>
