--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 	<meta name="keywords" content="ITIS vinci, Serra, Arduino, PCTO, green, bio, natura, tech, informatica, verde, piante, arduino, serra-arduino" />
 	<link href="style.css" type="text/css" rel="stylesheet" />
 	</head>
-	ciaoweifi
-	jiehvwhuv
-	hveuhv
+
+	ciao
 	
 	<body>
 		<header>
