--- a/indexgrafici.html
+++ b/indexgrafici.html
@@ -1,4 +1,3 @@
-
 <! DOCTYPE html >
 
 <html>
@@ -8,17 +7,8 @@
 	<meta name="author" content="3ci diurno" />
 	<meta name = "description" content="..." />
 	<meta name="keywords" content="ITIS vinci, Serra, Arduino, PCTO, green, bio, natura, tech, informatica, verde, piante, arduino, serra-arduino" />
-	<link href="grafici.css" type="text/css" rel="stylesheet" />
-	</head>
+	<link href="style.css" type="text/css" rel="stylesheet" />
+    </head>
+    
 
-	
-	<body>
-		<header>
-			<div id="title">
-				<div class="name">
-					<h1><span class="img"><img src="logo.png" /></span>SPROUT</h1>
-				</div>
-			</div>
-	
-	</body>
 </html>
