--- a/grafici/indexgrafici.html
+++ b/grafici/indexgrafici.html
@@ -11,7 +11,7 @@
 	
 	
 	</head>
-<canvas id="myChart" width="200px" height="200px"></canvas>
+<canvas id="myChart" width="100000000px" height="100000000px"></canvas>
 <script>
 const ctx = document.getElementById('myChart').getContext('2d');
 const myChart = new Chart(ctx, {
@@ -19,7 +19,7 @@ const myChart = new Chart(ctx, {
     data: {
         labels: ['Red', 'Blue', 'Yellow', 'Green', 'purple', 'Orange'],
         datasets: [{
-            label: '# of Votes',
+            label: '# di votanti',
             data: [12, 19, 3, 5, 2, 11],
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
@@ -37,7 +37,7 @@ const myChart = new Chart(ctx, {
                 'rgba(153, 102, 255, 1)',
                 'rgba(255, 159, 64, 1)'
             ],
-            borderWidth: 1
+            borderWidth: 5  // modifica lo spessore
         }]
     },
     options: {
