--- a/sito/index.html
+++ b/sito/index.html
@@ -19,19 +19,63 @@
 			</div>
 		
 			<div id="menu"> <!--Menù di navigazione-->
-			
+				<div class="testo">
+					<span>
+					<strong><p>MEN&Ugrave;</p>
+				</div>
+				<div class="testo">
+					<span>
+					<strong><p>MEN&Ugrave;</p>
+				</div>
+				<div class="testo">
+					<span>
+					<strong><p>MEN&Ugrave;</p>
+				</div>
+				<div class="testo">
+					<span>
+					<strong><p>MEN&Ugrave;</p>
+				</div>
+				<div class="testo">
+					<span>
+					<strong><p>MEN&Ugrave;</p>
+				</div>
+				<div class="testo">
+					<span>
+					<strong><p>MEN&Ugrave;</p>
+				</div>
+				<div class="testo">
+					<span>
+					<strong><p>MEN&Ugrave;</p>
+				</div>
+				<div class="testo">
+					<span>
+					<strong><p>MEN&Ugrave;</p>
+				</div>
 			</div>
+
 			
 			<main id="corpo"> <!--Il corpo del sito-->
 				<nav>
+				<p>-Capitolo 1</p>
+				<p>-Capitolo 1</p>
+				<p>-Capitolo 1</p>
+				<p>-Capitolo 1</p>
+				<p>-Capitolo 1</p>
+				<p>-Capitolo 1</p>
+				<p>-Capitolo 1</p>
 				</nav>
 				
 				<article>
+				<p>qswugdwgdwyaaaaaaaaaaaaaaaaaa</p>
 				</article>
 				
 				<aside>
 				</aside>
 			</main>
+			
+			<footer>
+			<p>ANNO: 2021-2022 | &copy; Leonardo da Vinci ITIS (MO)</p>
+			</footer>
 	</body>
 </html>
 	
