--- a/grafici/modellografico.html
+++ b/grafici/modellografico.html
@@ -19,16 +19,18 @@
     'March',
     'April',
     'May',
-    'June',
+    'june',
+    'july',
+    'august',
   ];
 
   const data = {
     labels: labels,
     datasets: [{
       label: 'My First dataset',
-      backgroundColor: 'rgb(255, 99, 132)',
+      backgroundColor: 'rgb(255, 122, 132)',
       borderColor: 'rgb(255, 99, 132)',
-      data: [0, 10, 5, 2, 20, 30, 45],
+      data: [10, 10, 5, 2, 20, 30, 45, 33],
     }]
   };
 
