--- a/sito/index.html
+++ b/sito/index.html
@@ -7,7 +7,7 @@
 	<meta name="author" content="3ci diurno" />
 	<meta name = "description" content="..." />
 	<meta name="keywords" content="ITIS vinci, Serra, Arduino, PCTO, green, bio, natura, tech, informatica, verde, piante, arduino, serra-arduino" />
-	<link href="style.css" type="text/css" rel="stylesheet" />
+	<link href="CSS/style.css" type="text/css" rel="stylesheet" />
 	</head>
 	
 	<body>
@@ -55,27 +55,13 @@
 
 			
 			<main id="corpo"> <!--Il corpo del sito-->
-				<nav>
-				<p>-Capitolo 1</p>
-				<p>-Capitolo 1</p>
-				<p>-Capitolo 1</p>
-				<p>-Capitolo 1</p>
-				<p>-Capitolo 1</p>
-				<p>-Capitolo 1</p>
-				<p>-Capitolo 1</p>
-				</nav>
-				
-				<article>
-				<p>qswugdwgdwyaaaaaaaaaaaaaaaaaa</p>
-				</article>
-				
-				<aside>
-				</aside>
-			</main>
-			
-			<footer>
-			<p>ANNO: 2021-2022 | &copy; Leonardo da Vinci ITIS (MO)</p>
-			</footer>
+				<section class="layout">
+  <div class="header">1</div>
+  <div class="leftSide">2</div>
+  <div class="body">3</div>
+  <div class="rightSide">4</div>
+  <div class="footer">5</div>
+</section>
 	</body>
 </html>
 	
