--- a/grafici/modellografico.html
+++ b/grafici/modellografico.html
@@ -37,13 +37,13 @@
       label: 'GRAFICO',
       backgroundColor: 'rgb(123, 251, 178)', // sono i puntini del grafico
       borderColor: 'rgb(122, 211, 134)', // colore della linea del grafico
-      data: [10, 10, 5, 2, 20, 30, 45, 33, 55, 3 ,3, 3],
+      data: [10, 10, 5, 2, 20, 30, 45, 33, 55, 3 ,3, 33],
     }]
   };
   
 
   const config = {
-    type: 'line',
+    type: 'bar',
     data: data,
     options: {
       plugins: {
