--- a/grafici/modellografico.html
+++ b/grafici/modellografico.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<link href="grafici.css" style="text/css" rel="stylesheet">
 
 
 </head>
 
 <body>
   <div class="chartBox">
-    <canvas id="myChart"></canvas>
+    <canvas id="myChart" width ="100px " height="100px"></canvas>
     <canvas id="myChart1"></canvas>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -42,6 +42,8 @@
           }]
       },
       options: {
+          responsive:true, 
+          maintainAspectratio:false,
           scales: {
             y: {
               beginAtZero: true
