--- a/grafici/modellografico.html
+++ b/grafici/modellografico.html
@@ -7,28 +7,28 @@
 </head>
 
 <body>
+  <h1>GRAFICI</h1>
   <div class="chartBox">
-    <canvas id="myChart" width ="100px " height="100px"></canvas>
-    <canvas id="myChart1"></canvas>
+    <div class="porz1"><canvas id="myChart" width ="50px " height="50px"></canvas></div><P>CIAO</P> <!--id del primo grafico myChart-->
+    <div class="porz2"><canvas id="myChart1" width="50px" height="50px"></canvas></div><P>CIAO</P>>
+    <div class="porz3"><canvas id="myChart2" width="50px" height="50px"></canvas> <!--id del primo grafico myChart1-->
   </div>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
+  <div>
   <script>
     // PRIMO GRAFICO /////////////////////////////////////////////////////////////
     const ctx = document.getElementById('myChart').getContext('2d');
     const myChart = new Chart(ctx, {
       type: 'bar',
       data:{
-          labels: ['Red', 'Blue', 'Green'],
+          labels: ['giorno 1', 'giorno 2 ', 'giorno 3'],
           datasets: [{
-            label: '# of Votes',
-            data: [12, 109, 104, 83],
-            backgroundColor: ['rgba(255, 99, 132, 0.2)', 
+            label: 'temperatura',
+            data: [12, 11, 104],
+            backgroundColor: ['rgba(255, 99, 11, 0.2)', 
                               'rgba(54, 162, 235, 0.2)', 
                               'rgba(255, 206, 86, 0.2)',
                               'rgba(75, 192, 192, 0.2)',
-                              'rgba(153, 102, 255, 0.2)',
-                              'rgba(255, 159, 64, 0.2)' 
             ],
             borderColor: [
                               'rgba(255, 99, 132, 1)', 
@@ -38,7 +38,7 @@
                               'rgba(153, 102, 255, 1)',
                               'rgba(255, 159, 64, 1)' 
             ],
-            borderWidth: 1
+            borderWidth: 3
           }]
       },
       options: {
@@ -51,14 +51,18 @@
           }
       }
     });
+  </script>
+  </div>
+  <div>
+  <script>
     // SECONDO GARFICO /////////////////////////////////////////////////////////
     const ctx1 = document.getElementById('myChart1').getContext('2d');
     const myChart1 = new Chart(ctx1, {
-      type: 'pie',
+      type: 'line',
       data:{
           labels: ['Red', 'Blue', 'Green'],
           datasets: [{
-            label: '# of Votes',
+            label: 'pressione',
             data: [22, 109, 104, 83],
             backgroundColor: ['rgba(255, 99, 132, 0.2)', 
                               'rgba(54, 162, 235, 0.2)', 
@@ -75,10 +79,12 @@
                               'rgba(153, 102, 255, 1)',
                               'rgba(255, 159, 64, 1)' 
             ],
-            borderWidth: 1
+            borderWidth: 3
           }]
       },
       options: {
+          responsive:true, 
+          maintainAspectratio:false,
           scales: {
             y: {
               beginAtZero: true
@@ -86,7 +92,48 @@
           }
       }
     });
-    </script>
-      
+  </script>
+  </div>
+  <div>
+  <script>
+    const ctx2 = document.getElementById('myChart2').getContext('2d');
+    const myChart2 = new Chart(ctx2, {
+      type: 'bar',
+      data:{
+          labels: ['Red', 'Blue', 'Green'],
+          datasets: [{
+            label: 'acqua',
+            data: [11, 33, 777, ],
+            backgroundColor: ['rgba(255, 99, 132, 0.2)', 
+                              'rgba(54, 162, 235, 0.2)', 
+                              'rgba(255, 206, 86, 0.2)',
+                              'rgba(75, 192, 192, 0.2)',
+                              'rgba(153, 102, 255, 0.2)',
+                              'rgba(255, 159, 64, 0.2)' 
+            ],
+            borderColor: [
+                              'rgba(255, 99, 132, 1)', 
+                              'rgba(54, 162, 235, 1)', 
+                              'rgba(255, 206, 86, 1)',
+                              'rgba(75, 192, 192, 1)',
+                              'rgba(153, 102, 255, 1)',
+                              'rgba(255, 159, 64, 1)' 
+            ],
+            borderWidth: 3
+          }]
+      },
+      options: {
+          responsive:true, 
+          maintainAspectratio:false,
+          scales: {
+            y: {
+              beginAtZero: true
+            }
+          }
+      }
+    });
+
+  </script>
+  </div>
 </body>
 </html>
