--- a/sito/index.html
+++ b/sito/index.html
@@ -68,7 +68,7 @@
 			<main id="corpo"> <!--Il corpo del sito-->
 				<section class="layout">
 					<div class="leftSide">2</div>
-					<div class="body">3</div>
+					<div class="body"><h1>GRAFICI</h1></div>
 					<div class="rightSide">4</div>
 					<div class="footer">5</div>
 				</section>
