--- a/sito/index.html
+++ b/sito/index.html
@@ -26,7 +26,7 @@
 				</div>
 				
 				<div class = "subname">
-					<h3>    Sustainable Project Related to Our useful Tools</h3>
+					<h3>    Sustainable Project Related to Our Useful Tools</h3>
 				</div>	
 				
 			</div>
@@ -65,10 +65,10 @@
 		</header>		
 
 			
-			<main id="corpo"> <!--Il corpo del sito-->
+		 <!--Il corpo del sito-->
 				<section class="layout">
 					<div class="leftSide">2</div>
-					<div class="body"><h1>GRAFICI</h1></div>
+					<div class="body"></div>
 					<div class="rightSide">4</div>
 					<div class="footer">5</div>
 				</section>
