--- a/sito/index.html
+++ b/sito/index.html
@@ -14,9 +14,9 @@
 	</head>
 	
 	<body>
-		<header>
-		<hr class = "a" />   
+		<header class="spazziatura">
 			<div id="title"> <!--titolo del sito-->
+			<hr class = "a" />   
 				<div class ="logo">
 					<img src = "immagini/logo.png">
 				</div>
@@ -29,46 +29,46 @@
 					<h3>    Sustainable Project Related to Our Useful Tools</h3>
 				</div>	
 				
-			</div>
-			<div id="menu"> <!--Menù di navigazione-->
-			<hr class = "a" />
-				<div class="testo">
-					<span>
-					<strong><p>MEN&Ugrave;</p>
-				</div>
-				<div class="testo">
-					<span>
-					<strong><p>MEN&Ugrave;</p>
-				</div>
-				<div class="testo">
-					<span>
-					<strong><p>MEN&Ugrave;</p>
-				</div>
-				<div class="testo">
-					<span>
-					<strong><p>MEN&Ugrave;</p>
-				</div>
-				<div class="testo">
-					<span>
-					<strong><p>MEN&Ugrave;</p>
-				</div>
-				<div class="testo">
-					<span>
-					<strong><p>GRAFICI</p>
-				</div>
-				<div class="testo">
-					<span>
-					<strong><p>MEN&Ugrave;</p>
-				</div>
+				<div id="menu"> <!--Menù di navigazione-->
 				<hr class = "a" />
+					<div class="testo">
+						<span>
+						<strong><p>MEN&Ugrave;</p>
+					</div>
+					<div class="testo">
+						<span>
+						<strong><p>MEN&Ugrave;</p>
+					</div>
+					<div class="testo">
+						<span>
+						<strong><p>MEN&Ugrave;</p>
+					</div>
+					<div class="testo">
+						<span>
+						<strong><p>MEN&Ugrave;</p>
+					</div>
+					<div class="testo">
+						<span>
+						<strong><p>MEN&Ugrave;</p>
+					</div>
+					<div class="testo">
+						<span>
+						<strong><p>GRAFICI</p>
+					</div>
+					<div class="testo">
+						<span>
+						<strong><p>MEN&Ugrave;</p>
+					</div>
+					<hr class = "a" />
+				</div>
 			</div>
-		</header>		
+		</header>	
 
 			
 		 <!--Il corpo del sito-->
 				<section class="layout">
 					<div class="leftSide">2</div>
-					<div class="body"></div>
+					<div class="body">ciao</div>
 					<div class="rightSide">4</div>
 					<div class="footer">5</div>
 				</section>
