--- a/sito/index.html
+++ b/sito/index.html
@@ -42,7 +42,7 @@
 					<a href="grafici.html" class="grafico">GRAFICI</a>
        </div>
 				<div class="testo">
-					<a href="#">CHI SIAMO</a>
+					<a href="chisiamo.index">CHI SIAMO</a>
 				</div>
 				<div class="testo">
 					<a href="#">ASSISTENZA</a>
