--- a/sito/index.html
+++ b/sito/index.html
@@ -21,7 +21,7 @@
 		<hr class = "a" />   
 			<div id="title"> <!--titolo del sito-->
 				<div class ="logo">
-					<img src = "immagini/logo.png">
+					<img src = "logo.png">
 				</div>
 				
 				<div class = "name">
