--- a/sito/chisiamo.html
+++ b/sito/chisiamo.html
@@ -6,7 +6,7 @@
 		<meta name="author" content="3ci diurno" />
 		<meta name = "description" content="..." />
 		<meta name="keywords" content="ITIS vinci, Serra, Arduino, PCTO, green, bio, natura, tech, informatica, verde, piante, arduino, serra-arduino" />
-		<link href="style.css" type="text/css" rel="stylesheet" />
+		<link href="stylechisiamo.css" type="text/css" rel="stylesheet" />
 		<link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
 		<link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
 		<link rel="icon" type="image/x-icon" href="immagini/logo.png">
@@ -65,7 +65,13 @@
 					<div class="leftSide"></div>
 					<div class="body"></div>
 					<div class="rightSide"></div>
-					<div class="footer"> albe gay albe gay albe gay albe gay albe gay albe gay albe gay </div>
+					<div class="footer">
+					<h3 class = "copy">ITIS Vinci Carpi (MO) 3CI 2021-2022 &copy;</h3>	
+					<a href = "https://www.facebook.com/people/Sprout-Carpi/100078603526319/" target="new_blank"><img src = "immagini/logo facebook.png" class = "imf" /></a>
+					<a href = "https://www.instagram.com/sproutcarpiofficial/" target="new_blank"><img src = "immagini/logo insta 2.png" class = "imi" /></a>
+					<a href = "https://twitter.com/CarpiSprout" target="new_blank"><img src = "immagini/logo twitter.png" class ="imt" /></a>
+					
+					</div>
 				</section>
 	</body>
 </html>
