--- a/sito/index.html
+++ b/sito/index.html
@@ -21,7 +21,7 @@
 		<hr class = "a" />   
 			<div id="title"> <!--titolo del sito-->
 				<div class ="logo">
-					<img src = "logo.png">
+					<img src = "immagini/logo.png">
 				</div>
 				
 				<div class = "name">
@@ -42,16 +42,16 @@
 					<a href="grafici.html" class="grafico">GRAFICI</a>
        </div>
 				<div class="testo">
-					<a href="chisiamo.index">CHI SIAMO</a>
+					<a href="chisiamo.html">CHI SIAMO</a>
 				</div>
 				<div class="testo">
-					<a href="#">ASSISTENZA</a>
+					<a href="assistenza.html">ASSISTENZA</a>
 				</div>
 				<div class="testo">
-				  <a href ="#">I NOSTRI PRODOTTI</a>
+				  <a href ="inostriprodotti.html">I NOSTRI PRODOTTI</a>
 				</div>
 				<div class="testo">
-					<a href="#">ARDUINO ALLA BASE</a>
+					<a href="arduionoallabase.html">ARDUINO ALLA BASE</a>
 				</div>
 				<div class="testo">
 					<a href="#">MEN&Ugrave;</a>
@@ -65,7 +65,13 @@
 					<div class="leftSide"></div>
 					<div class="body"></div>
 					<div class="rightSide"></div>
-					<div class="footer"> albe gay albe gay albe gay albe gay albe gay albe gay albe gay </div>
+					<div class="footer">
+					<h3 class = "copy">ITIS Vinci Carpi (MO) 3CI 2021-2022 &copy;</h3>	
+					<a href = "https://www.facebook.com/people/Sprout-Carpi/100078603526319/" target="new_blank"><img src = "immagini/logo facebook.png" class = "imf" /></a>
+					<a href = "https://www.instagram.com/sproutcarpiofficial/" target="new_blank"><img src = "immagini/logo insta 2.png" class = "imi" /></a>
+					<a href = "https://twitter.com/CarpiSprout" target="new_blank"><img src = "immagini/logo twitter.png" class ="imt" /></a>
+					
+					</div>
 				</section>
 	</body>
 </html>
