--- a/grafici/modellografico.html
+++ b/grafici/modellografico.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <link href="grafici.css" style="text/css" rel="stylesheet">
-<title>index</title>
-<link rel="icon" type="image/x-icon" href="logo.png">
+<title>GRAFICI</title>
+<link rel="icon" type="image/x-icon" href="IMMAGINI/logo.png">
 <script type="text/javascript" src="data.json"></script>
 <script type="text/javascript" src="data1.json"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -15,7 +15,7 @@
 		<hr class = "a" />   
 			<div id="title"> <!--titolo del sito-->
 				<div class ="logo">
-					<img src = "logo.png">
+					<img src = "IMMAGINI/logo.png">
 				</div>
 				
 				<div class = "name">
@@ -30,13 +30,13 @@
       <hr class = "a" />
       <div id="menu"> <!--Menù di navigazione-->
 				<div class="testo">
-					<a href>MEN&Ugrave;</a>
+					<a href="../sito/index.html">MEN&Ugrave;</a>
 				</div>
 				<div class="testo">
-              <a href="#" class="grafico">GRAFICI</a>
+              <a href="modellografico.html" class="grafico">GRAFICI</a>
        </div>
 				<div class="testo">
-					<a href="#">CHI SIAMO</a>
+					<a href="chisiamo.html">CHI SIAMO</a>
 				</div>
 				<div class="testo">
 					<a href="#">ASSISTENZA</a>
@@ -65,7 +65,12 @@
         </div>
       </div>
 					<div class="rightSide"></div>
-					<div class="footer"> footer fotter footer footer </div>
+					<div class="footer">
+            <h3 class = "copy">ITIS Vinci Carpi (MO) 3CI 2021-2022 &copy;</h3>	
+					<a href = "https://www.facebook.com/people/Sprout-Carpi/100078603526319/" target="new_blank"><img src = "immagini/logo facebook.png" class = "imf" /></a>
+					<a href = "https://www.instagram.com/sproutcarpiofficial/" target="new_blank"><img src = "immagini/logo insta 2.png" class = "imi" /></a>
+					<a href = "https://twitter.com/CarpiSprout" target="new_blank"><img src = "immagini/logo twitter.png" class ="imt" /></a>
+          </div>
 				</section>
 
       
