--- a/grafici/modellografico.html
+++ b/grafici/modellografico.html
@@ -5,7 +5,6 @@
 <title>GRAFICI</title>
 <link rel="icon" type="image/x-icon" href="IMMAGINI/logo.png">
 <script type="text/javascript" src="data.json"></script>
-<script type="text/javascript" src="data1.json"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 </head>
@@ -36,7 +35,7 @@
               <a href="modellografico.html" class="grafico">GRAFICI</a>
        </div>
 				<div class="testo">
-					<a href="chisiamo.html">CHI SIAMO</a>
+					<a href="../sito/chisiamo.html">CHI SIAMO</a>
 				</div>
 				<div class="testo">
 					<a href="#">ASSISTENZA</a>
@@ -124,7 +123,7 @@
   </div>
   <div>
   <script>
-    const temperatura = JSON.parse(data)
+    const temperatura = JSON.parse(dataz)
   
     // SECONDO GRAFICO /////////////////////////////////////////////////////////
     const ctx1 = document.getElementById('myChart1').getContext('2d');
@@ -177,6 +176,7 @@
   </div>
   <div>
   <script>
+      const tempo = JSON.parse(datax);
     const ctx2 = document.getElementById('myChart2').getContext('2d');
     const myChart2 = new Chart(ctx2, {
       type: 'pie',
@@ -184,7 +184,7 @@
           labels: ['giorno 1', 'giorno 2', 'giorno 3',],
           datasets: [{
             label: 'acqua',
-            data: [111, 565, 777, ],
+            data: [tempo[0].valore, tempo[1].valore, tempo[2].valore],
             backgroundColor: ['rgba(123, 222, 132, 0.2)', 
                               'rgba(54, 162, 235, 0.2)', 
                               'rgba(255, 206, 86, 0.2)', 
