--- a/sito/chisiamo.html
+++ b/sito/chisiamo.html
@@ -39,7 +39,7 @@
 					<a href = "index.html">MEN&Ugrave;</a>
 				</div>
 				<div class="testo">
-					<a href="grafici.html" class="grafico">GRAFICI</a>
+					<a href="../grafici/modellografico.html" class="grafico">GRAFICI</a>
        </div>
 				<div class="testo">
 					<a href="chisiamo.html">CHI SIAMO</a>
