--- a/sito/inostriprodotti.html
+++ b/sito/inostriprodotti.html
@@ -63,7 +63,20 @@
 			 <!--Il corpo del sito-->
 				<section class="layout">
 					<div class="leftSide"></div>
-					<div class="body"></div>
+					<div class="body">
+						<div class="caselle">
+							<img class="img" src="" width="120px" height="150px">
+							<figcaption>Serra 1.0 Base</figcaption>
+						</div>
+						<div class="caselle">
+							<img class="img" src="" width="120px" height="150px">
+							<figcaption>Serra 1.0 Medio</figcaption>
+						</div>
+						<div class="caselle">
+							<img class="img" src="" width="120px" height="150px">
+							<figcaption>Serra 1.0 Avanzato</figcaption>
+						</div>						
+					</div>
 					<div class="rightSide"></div>
 					<div class="footer">
 					<h3 class = "copy">ITIS Vinci Carpi (MO) 3CI 2021-2022 &copy;</h3>	
@@ -73,5 +86,6 @@
 					
 					</div>
 				</section>
+
 	</body>
 </html>
