--- a/sito/inostriprodotti.html
+++ b/sito/inostriprodotti.html
@@ -65,17 +65,41 @@
 					<div class="leftSide"></div>
 					<div class="body">
 						<div class="caselle">
-							<img class="img" src="" width="120px" height="150px">
-							<figcaption>Serra 1.0 Base</figcaption>
+							<img class="img" src="">
+							<figcaption>Serra 1.0 Base<br/>una serra facile, economica, di base</figcaption>
 						</div>
 						<div class="caselle">
-							<img class="img" src="" width="120px" height="150px">
-							<figcaption>Serra 1.0 Medio</figcaption>
+							<img class="img" src="">
+							<figcaption>Serra 1.0 Medio<br />una via di mezzo di serra</figcaption>
 						</div>
 						<div class="caselle">
-							<img class="img" src="" width="120px" height="150px">
-							<figcaption>Serra 1.0 Avanzato</figcaption>
-						</div>						
+							<img class="img" src="">
+							<figcaption>Serra 1.0 Avanzato<br/>il top di gamma delle serre</figcaption>
+						</div>
+						<div class="caselle">
+							<img class="img" src="">
+							<figcaption>Arduino</figcaption>
+						</div>
+						<div class="caselle">
+							<img class="img" src="">
+							<figcaption>breadboard</figcaption>
+						</div>
+						<div class="caselle">
+							<img class="img" src="">
+							<figcaption>sensore temperatura/umidita</figcaption>
+						</div>
+						<div class="caselle">
+							<img class="img" src="">
+							<figcaption>sensore temperatura/umidita</figcaption>
+						</div>
+						<div class="caselle">
+							<img class="img" src="">
+							<figcaption>sensore temperatura/umidita</figcaption>
+						</div>
+						<div class="caselle">
+							<img class="img" src="">
+							<figcaption>sensore temperatura/umidita</figcaption>
+						</div>				
 					</div>
 					<div class="rightSide"></div>
 					<div class="footer">
