--- a/sito/chisiamo.html
+++ b/sito/chisiamo.html
@@ -63,7 +63,9 @@
 			 <!--Il corpo del sito-->
 				<section class="layout">
 					<div class="leftSide"></div>
-					<div class="body"></div>
+					<div class="body">
+						<h1 class="title">CHI SIAMO?</h1>
+					</div>
 					<div class="rightSide"></div>
 					<div class="footer">
 					<h3 class = "copy">ITIS Vinci Carpi (MO) 3CI 2021-2022 &copy;</h3>	
