--- a/sito/inostriprodotti.html
+++ b/sito/inostriprodotti.html
@@ -39,7 +39,7 @@
 					<a href = "index.html">MEN&Ugrave;</a>
 				</div>
 				<div class="testo">
-					<a href="grafici.html" class="grafico">GRAFICI</a>
+					<a href="../grafici/modellografico.html" class="grafico">GRAFICI</a>
        </div>
 				<div class="testo">
 					<a href="chisiamo.html">CHI SIAMO</a>
@@ -77,29 +77,41 @@
 							<figcaption>Serra 1.0 Avanzato<br/>il top di gamma delle serre</figcaption>
 						</div>
 						<div class="caselle">
-							<img class="img" src="">
-							<figcaption>Arduino</figcaption>
+							<img class="img" src="immagini/arduino.jpg">
+							<figcaption>Arduino<br />scheda Arduino 1.0</figcaption>
 						</div>
 						<div class="caselle">
-							<img class="img" src="">
-							<figcaption>breadboard</figcaption>
+							<img class="img" src="immagini/breadbrd.JPG">
+							<figcaption>breadboard<br />scheda breadboard collegata</figcaption>
 						</div>
 						<div class="caselle">
-							<img class="img" src="">
-							<figcaption>sensore temperatura/umidita</figcaption>
+							<img class="img" src="immagini/sens temp.jpg">
+							<figcaption>sensore temperatura<br />sensori diversi utilizzi</figcaption>
 						</div>
 						<div class="caselle">
-							<img class="img" src="">
-							<figcaption>sensore temperatura/umidita</figcaption>
+							<img class="img" src="immagini/motore.JPG">
+							<figcaption>servomotore X4<br />prova prova</figcaption>
 						</div>
 						<div class="caselle">
-							<img class="img" src="">
-							<figcaption>sensore temperatura/umidita</figcaption>
+							<img class="img" src="immagini/sens umidita.JPG">
+							<figcaption>sensore di umidità<br />sensore dato all'umidità</figcaption>
 						</div>
 						<div class="caselle">
-							<img class="img" src="">
-							<figcaption>sensore temperatura/umidita</figcaption>
+							<img class="img" src="immagini/sens blut.JPG">
+							<figcaption>sensore bluethoot<br />sensore dato al collegamento</figcaption>
 						</div>				
+						<div class="caselle">
+							<img class="img" src="">
+							<figcaption>scocca</figcaption>
+						</div>
+						<div class="caselle">
+							<img class="img" src="immagini/fotoresistore.JPG">
+							<figcaption>fotoresistore<br />boh boh boh</figcaption>
+						</div>
+						<div class="caselle">
+							<img class="img" src="immagini/pompa.JPG">
+							<figcaption>pompa irrigazione<br />boh bih</figcaption>
+						</div>
 					</div>
 					<div class="rightSide"></div>
 					<div class="footer">
