--- a/sito/inostriprodotti.html
+++ b/sito/inostriprodotti.html
@@ -64,10 +64,12 @@
 				<section class="layout">
 					<div class="leftSide"></div>
 					<div class="body">
-						<div class="caselle">
-							<img class="img" src="">
-							<figcaption>Serra 1.0 Base<br/>una serra facile, economica, di base</figcaption>
-						</div>
+						<a href="serra1base.html">
+							<div class="caselle">
+									<img class="img" src="immagini/arduino.jpg">
+										<figcaption>Serra 1.0 Base<br/>una serra facile, economica, di base</figcaption>
+							</div>
+						</a>
 						<div class="caselle">
 							<img class="img" src="">
 							<figcaption>Serra 1.0 Medio<br />una via di mezzo di serra</figcaption>
