--- a/sito/inostriprodotti.html
+++ b/sito/inostriprodotti.html
@@ -70,10 +70,12 @@
 										<figcaption>Serra 1.0 Base<br/>una serra facile, economica, di base</figcaption>
 							</div>
 						</a>
-						<div class="caselle">
-							<img class="img" src="">
-							<figcaption>Serra 1.0 Medio<br />una via di mezzo di serra</figcaption>
-						</div>
+						<a href="serra1medio.html">
+							<div class="caselle">
+								<img class="img" src="">
+								<figcaption>Serra 1.0 Medio<br />una via di mezzo di serra</figcaption>
+							</div>
+						</a>	
 						<div class="caselle">
 							<img class="img" src="">
 							<figcaption>Serra 1.0 Avanzato<br/>il top di gamma delle serre</figcaption>
