--- a/grafici/modellografico.html
+++ b/grafici/modellografico.html
@@ -29,19 +29,19 @@
       <hr class = "a" />
       <div id="menu"> <!--Menù di navigazione-->
 				<div class="testo">
-					<a href="../sito/index.html">MEN&Ugrave;</a>
+					<a href="../sito/ITALIANO/index/index.html">MEN&Ugrave;</a>
 				</div>
 				<div class="testo">
-              <a href="modellografico.html" class="grafico">GRAFICI</a>
+              <a href="" class="grafico">GRAFICI</a>
        </div>
 				<div class="testo">
-					<a href="../sito/chisiamo.html">CHI SIAMO</a>
+					<a href="../sito/ITALIANO/chisiamo/chisiamo.html">CHI SIAMO</a>
 				</div>
 				<div class="testo">
-					<a href="#">ASSISTENZA</a>
+					<a href="../sito/ITALIANO/assistenza/assistenza.html">ASSISTENZA</a>
 				</div>
 				<div class="testo">
-				  <a href ="../sito/inostriprodotti.html">I NOSTRI PRODOTTI</a>
+				  <a href ="../sito/ITALIANO/inostriprodotti/inostriprodotti.html">I NOSTRI PRODOTTI</a>
 				</div>
 				<div class="testo">
 					<a href="#">ARDUINO ALLA BASE</a>
