--- a/grafici/modellografico.html
+++ b/grafici/modellografico.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link href="grafici.css" style="text/css" rel="stylesheet">
-<title>GRAFICI</title>
+<title>SPROUT</title>
 <link rel="icon" type="image/x-icon" href="IMMAGINI/logo.png">
 <script type="text/javascript" src="data.json"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
