--- a/sito/ITALIANO/inostriprodotti/inostriprodotti.html
+++ b/sito/ITALIANO/inostriprodotti/inostriprodotti.html
@@ -64,19 +64,19 @@
                 <section class="layout">
                     <div class="leftSide"></div>
                     <div class="body">
-                        <a href="serra1base.html">
+                        <a href="../serre/serra1base.html">
                             <div class="caselle">
                                     <img class="img" src="immagini/arduino.jpg">
                                         <figcaption>Serra 1.0 Base<br/>una serra facile, economica, di base</figcaption>
                             </div>
                         </a>
-                        <a href="serra1medio.html">
+                        <a href="../serre/serra1medio.html">
                             <div class="caselle">
                                 <img class="img" src="">
                                 <figcaption>Serra 1.0 Medio<br />una via di mezzo di serra</figcaption>
                             </div>
                         </a>    
-                        <a href="serra1avanzato.html">
+                        <a href="../serre/serra1avanzato.html">
                             <div class="caselle">
                                 <img class="img" src="">
                                 <figcaption>Serra 1.0 Avanzato<br/>il top di gamma delle serre</figcaption>
