--- a/sito/ITALIANO/serre/serra1base.html
+++ b/sito/ITALIANO/serre/serra1base.html
@@ -6,10 +6,10 @@
 		<meta name="author" content="3ci diurno" />
 		<meta name = "description" content="..." />
 		<meta name="keywords" content="ITIS vinci, Serra, Arduino, PCTO, green, bio, natura, tech, informatica, verde, piante, arduino, serra-arduino" />
-		<link href="style.css" type="text/css" rel="stylesheet" />
+		<link href="../serre/styleserre.css" type="text/css" rel="stylesheet" />
 		<link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
 		<link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
-		<link rel="icon" type="image/x-icon" href="immagini/logo.png">
+		<link rel="icon" type="image/x-icon" href="../../immagini/logo.png">
 	</head>
 
 
@@ -21,7 +21,7 @@
 		<hr class = "a" />   
 			<div id="title"> <!--titolo del sito-->
 				<div class ="logo">
-					<img src = "immagini/logo.png">
+					<img src = "../../immagini/logo.png">
 				</div>
 				
 				<div class = "name">
@@ -74,9 +74,9 @@
 						<div><a href="mailto:sproutassistenza@gmail.com?subject=Assistenza SPROUT"  class="contatti">sproutassistenza@gmail.com</a></div>
 						<div class="contatti2">+39 00000034</div>
 					</div>
-				<a href = "https://www.facebook.com/people/Sprout-Carpi/100078603526319/" target="new_blank"><img src = "immagini/logo facebook.png" class = "imf" /></a>
-				<a href = "https://www.instagram.com/sproutcarpiofficial/" target="new_blank"><img src = "immagini/logo insta 2.png" class = "imi" /></a>
-				<a href = "https://twitter.com/CarpiSprout" target="new_blank"><img src = "immagini/logo twitter.png" class ="imt" /></a>
+				<a href = "https://www.facebook.com/people/Sprout-Carpi/100078603526319/" target="new_blank"><img src = "../../immagini/logo facebook.png" class = "imf" /></a>
+				<a href = "https://www.instagram.com/sproutcarpiofficial/" target="new_blank"><img src = "../../immagini/logo insta 2.png" class = "imi" /></a>
+				<a href = "https://twitter.com/CarpiSprout" target="new_blank"><img src = "../../immagini/logo twitter.png" class ="imt" /></a>
 				
 				</div>
 			</section>
