--- a/grafici/modellografico.html
+++ b/grafici/modellografico.html
@@ -32,7 +32,7 @@
 					<a href="../sito/ITALIANO/index/index.html">MEN&Ugrave;</a>
 				</div>
 				<div class="testo">
-              <a href="" class="grafico">GRAFICI</a>
+              <a href="" class="grafico menuz">GRAFICI</a>
        </div>
 				<div class="testo">
 					<a href="../sito/ITALIANO/chisiamo/chisiamo.html">CHI SIAMO</a>
@@ -44,7 +44,7 @@
 				  <a href ="../sito/ITALIANO/inostriprodotti/inostriprodotti.html">I NOSTRI PRODOTTI</a>
 				</div>
 				<div class="testo">
-					<a href="#">ARDUINO ALLA BASE</a>
+					<a href="../sito/ITALIANO/arduinobase/arduionoallabase.html">ARDUINO ALLA BASE</a>
 				</div>
 				<div class="testo">
 					<a href="#">MEN&Ugrave;</a>
