--- a/sito/ITALIANO/arduinobase/arduionoallabase.html
+++ b/sito/ITALIANO/arduinobase/arduionoallabase.html
@@ -51,7 +51,7 @@
 				  <a href ="../inostriprodotti/inostriprodotti.html">I NOSTRI PRODOTTI</a>
 				</div>
 				<div class="testo">
-					<a href="../arduinobase/arduionoallabase.html">ARDUINO ALLA BASE</a>
+					<a href="../arduinobase/arduionoallabase.html" class="menuz">ARDUINO ALLA BASE</a>
 				</div>
 				<div class="testo">
 					<a href="#">MEN&Ugrave;</a>
